[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-reposter"
version = "0.0.1"
description = "Local dev install"
authors = [{ name = "Hydra Dev" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra_reposter*"]  # <– что брать
exclude = ["sessions*"]        # <– что игнорировать

[project.scripts]
hydra-login = "hydra_reposter.cli_login:main"

[tool.ruff]
exclude = ["get-pip.py"]
